// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCollection Component render renders with no props 1`] = `
<withRouter(Collection)
  bodyWrapper={[Function]}
  defaultSortColumn={null}
  defaultSortDirection="asc"
  headerComponent={[Function]}
  outerWrapper={[Function]}
  rowComponent={[Function]}
  rows={Array []}
/>
`;

exports[`TableCollection Component render renders with props 1`] = `
<withRouter(Collection)
  bodyWrapper={[Function]}
  columns={
    Array [
      "one",
      "two",
    ]
  }
  defaultSortColumn={null}
  defaultSortDirection="asc"
  extraProp="plsPassDown"
  getRowData={[Function]}
  headerComponent={
    <thead>
      <Table.Row>
        <Table.HeaderCell>
          one
        </Table.HeaderCell>
        <Table.HeaderCell>
          two
        </Table.HeaderCell>
      </Table.Row>
    </thead>
  }
  outerWrapper={[Function]}
  rowComponent={[Function]}
  rows={Array []}
/>
`;
